# Newinvest

./: .replit  README.md  package-lock.json  package.json  pyproject.toml  run.py  run_invest.py  setup.py
Invest/: .replit  README.md  download_financial_fortress.py
Invest/FinancialFortress/: README.md  tailwind.config.ts
Invest/FinancialFortress/client/src/: App.tsx
Invest/FinancialFortress/docs/: dependencies.md  libraries.txt
Invest/FinancialFortress/scripts/: generate-admin.js
Invest/FinancialFortress/server/: routes.ts
Invest/client/src/: App.tsx
Invest/client/src/pages/: auth-page.tsx  dashboard-page.tsx  home-page.tsx
Invest/server/: auth.ts  routes.ts
Invest/shared/: schema.ts
client/: index.html
client/src/: index.css
client/src/components/admin/: BackupManager.tsx  ReportGenerator.tsx  RequestsManagement.tsx  SecurityMonitor.tsx  SystemNotifications.tsx
client/src/components/dashboard/: ActiveDeposits.tsx  Analytics.tsx  CryptoWallet.tsx  Dashboard.tsx  DepositForm.tsx  DepositRequestForm.tsx  EarningsReport.tsx  InvestmentGoals.tsx  LiveChat.tsx  MarketInsights.tsx  Notifications.tsx  PeerComparison.tsx  PortfolioManager.tsx  RiskAssessment.tsx  Security.tsx  TaxOptimizer.tsx  TradingSignals.tsx  TransactionHistory.tsx  WithdrawRequestForm.tsx
client/src/components/home/: Benefits.tsx  FAQ.tsx  FeaturedSection.tsx  HeroSection.tsx  InfoCards.tsx  InvestmentCalculator.tsx  ReferralProgram.tsx  TradingView.tsx  (+2 more)
client/src/hooks/: use-auth.tsx
client/src/pages/: dashboard-page.tsx
server/: routes.ts  storage.ts
shared/: schema.ts
(+48 files in other folders)
